--- a/highlights.html
+++ b/highlights.html
@@ -269,6 +269,10 @@
         <img src="R5.png" alt="T-Graphene Nanocapsule" style="width: 100%; height: 150px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
         <figcaption style="text-align: center; font-size: 0.9em; margin-top: 5px;">T-Graphene Nanocapsule</figcaption>
     </figure>
+    <figure style="margin: 0; padding: 0;">
+        <img src="R6.jpg" alt="TMD for Li ions storage batteries" style="width: 100%; height: 150px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+        <figcaption style="text-align: center; font-size: 0.9em; margin-top: 5px;">TMD for Li ions storage batteries</figcaption>
+    </figure>
 </div>
 
     </section>
