--- a/highlights.html
+++ b/highlights.html
@@ -245,7 +245,7 @@
         <li style="text-align: justify;"><strong>Optoelectronic Devices:</strong> Exploring materials with unique optical and electronic properties for applications in solar cells, LEDs, and photodetectors.</li>
         <li style="text-align: justify;"><strong>Sensing Materials:</strong> Studying nanomaterials for potential applications in gas sensing.</li>
         <li style="text-align: justify;"><strong>Wastewater Treatment:</strong> Exploring nanomaterials to remove toxic heavy metal ions in wastewater treatment.</li>
-        <li style="text-align: justify;"><strong>Drug Delivery:</strong> Stduying nanomaterials to carry drugs to targated cells.</li>
+        <li style="text-align: justify;"><strong>Drug Delivery:</strong> Studying nanomaterials to carry drugs to targated cells.</li>
       </ul>
     </div>
 <div style="flex: 1; display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px;">
