--- a/publications.html
+++ b/publications.html
@@ -255,9 +255,14 @@
         <li>M.T. Ahmed, D. Roy, A.A. Roman, Z. Kowser, S. Islam, F. Ahmed, "The adsorption of CO gas on the surface of boron nitride incorporating 2D carbon allotropes: a DFT analysis", Physica Scripta, 2024, 99, 0659c7.</li>
         <li>M.H. Rocky, M. Khatun, A.A. Roman, D. Roy, M.T. Ahmed, "A DFT study on boron carbon nitride and in-plane graphene-boron nitride nanosheets for O3 and F2 gas sensing", Computational and Theoretical Chemistry, 2024, 1237, 114639.</li>
         <li>I.J. Tonny, M. Khatun, D. Roy, A.A. Roman, M.T. Ahmed, "A first-principles investigation of BF3 and ClF3 gas sensing on N-defected AlN nanosheets", AIP Advances, 2024, 14, 045136.</li>
-        <li>M.T. Ahmed, A.A. Roman, D. Roy et al.,"Phosphorus-doped T-graphene nanocapsule toward O3 and SO2 gas sensing: a DFT and QTAIM analysis", Scientific Reports, 2024, 14, 3467.</li>
-        <li>M.T. Ahmed, D. Roy, A.A. Roman et al.,"A first principles study of RbSnCl3 perovskite toward NH3, SO2, and NO gas sensing", Nanoscale Advances (Royal Society of Chemistry), 2024, 6, 1218.</li>
-
+        <li>M.T. Ahmed, A.A. Roman, D. Roy, Islam, F. Ahmed, "Phosphorus-doped T-graphene nanocapsule toward O3 and SO2 gas sensing: a DFT and QTAIM analysis", Scientific Reports, 2024, 14, 3467.</li>
+        <li>M.T. Ahmed, D. Roy, A.A. Roman, S. Islam, F. Ahmed, "A first principles study of RbSnCl3 perovskite toward NH3, SO2, and NO gas sensing", Nanoscale Advances, 2024, 6, 1218.</li>
+        <li>M.T. Ahmed, D. Roy, A.A. Roman et al.,"A First-Principles Investigation of Cr Adsorption on C8 and B4N4 Nanocage in Aqueous Medium", Physical Chemistry Chemical Physics, 2023, 25, 32261.</li>
+        <li>P. Dhali, A.A. Oishi, A. Das, M.R. Hossain, F. Ahmed, D. Roy, M.M. Hasan,"A DFT and QTAIM insight into ethylene oxide adsorption on the surfaces of pure and metal-decorated inorganic fullerene-like nanoclusters", Heliyon, 2023, 9, e19407.</li>
+        <li>S.A.Bithe, M.M. Hasan, A.A. Oishi, P. Dhali, D. Roy, "To understand the miglitol adsorption behavior on BC3, BN, and GNS nanosheets using DFT and QTAIM analysis for drug delivery applications", Physica Scripta, 2023, 98, 075010.</li>
+        <li>S. Yeasmin, M.M. Hasan, A.A. Oishi, S.A.Bithe, D. Roy, A.S. Rad, "A first principles study of adsorption of hydrazine on C20, C40 and C60 fullerene nanoclusters", Molecular Simulation, 2023, 49, 551.</li>
+        <!--<li></li>
+        -->
       </ol>
     </section>
 
