--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
     <section id="overview" class="content-section">
       <h2>Overview</h2>
-      <p style="text-align: justify;">The <em>Condensed Matter Physics (CMP) Lab</em> at the Department of Physics, Jashore University of Science and Technology, 
+      <p style="text-align: justify;">The <hr>Condensed Matter Physics (CMP) Lab</hr> at the Department of Physics, Jashore University of Science and Technology, 
         is focused on computational research aimed at understanding the fundamental properties of materials at the atomic scale. 
         Our work is rooted in the theoretical frameworks of condensed matter physics, employing first-principles calculations and 
         molecular dynamics (MD) simulations to investigate the structural, electronic, magnetic, and thermal behaviors of a wide 
