--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
 
     <section id="overview" class="content-section">
       <h2>Overview</h2>
-      <p style="text-align: justify;">The <hr>Condensed Matter Physics (CMP) Lab</hr> at the Department of Physics, Jashore University of Science and Technology, 
-        is focused on computational research aimed at understanding the fundamental properties of materials at the atomic scale. 
-        Our work is rooted in the theoretical frameworks of condensed matter physics, employing first-principles calculations and 
-        molecular dynamics (MD) simulations to investigate the structural, electronic, magnetic, and thermal behaviors of a wide 
-        range of materials.</p>
+      <p style="text-align: justify;">The <strong>Condensed Matter Physics (CMP) Lab</strong> at the Department of Physics, 
+        Jashore University of Science and Technology, is focused on computational research aimed at understanding the fundamental 
+        properties of materials at the atomic scale. Our work is rooted in the theoretical frameworks of condensed matter physics, 
+        employing <strong>Density Functional Theory (DFT)</strong>strong> and <strong>Molecular Dynamics (MD)</strong>strong> simulations 
+        to investigate the structural, electronic, magnetic, and thermal behaviors of a wide range of materials.</p>
 
         <p style="text-align: justify;">The lab is currently equipped for high-level computational modeling, using state-of-the-art simulation techniques to 
         address challenges in materials design for energy storage, nanoelectronics, spintronics, and quantum materials. 
@@ -253,7 +253,7 @@
       <h3>Lab Facilities</h3>
       <ul>
         <li><i>High-Performance Computers for DFT & MD simulations</i></li>
-        <li><i>Licensed and open-source simulation packages, e.g., GaussView, Gaussian, CASTEP, AimALL, etc.</i></li>
+        <li><i>Licensed and open-source simulation packages, e.g., GaussView, Gaussian, CASTEP, AIMALL, etc.</i></li>
         <li><i>Visualization & data analysis tools, e.g., VESTA, Origin, VMD, etc. </i></li>
         <li><i>Secure remote access for collaborative projects and simulations</i></li>
         <li><i>Dedicated faculty mentors are available to guide students across a range of simulation-based research projects</i></li>
