--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
       <p style="text-align: justify;">The <strong>Condensed Matter Physics (CMP) Lab</strong> at the Department of Physics, 
         Jashore University of Science and Technology, is focused on computational research aimed at understanding the fundamental 
         properties of materials at the atomic scale. Our work is rooted in the theoretical frameworks of condensed matter physics, 
-        employing <strong>Density Functional Theory (DFT)</strong>strong> and <strong>Molecular Dynamics (MD)</strong>strong> simulations 
+        employing <strong>Density Functional Theory (DFT)</strong> and <strong>Molecular Dynamics (MD)</strong>strong> simulations 
         to investigate the structural, electronic, magnetic, and thermal behaviors of a wide range of materials.</p>
 
         <p style="text-align: justify;">The lab is currently equipped for high-level computational modeling, using state-of-the-art simulation techniques to 
-        address challenges in materials design for energy storage, nanoelectronics, spintronics, and quantum materials. 
+        address challenges in materials design for energy storage, sensing, optoelectronics, spintronics, and quantum materials. 
         As part of our long-term vision, we aim to expand into experimental materials research, including thin film synthesis 
         and device fabrication, following the development of appropriate laboratory facilities.</p>
       <h3>Lab Facilities</h3>
@@ -256,7 +256,7 @@
         <li><i>Licensed and open-source simulation packages, e.g., GaussView, Gaussian, CASTEP, AIMALL, etc.</i></li>
         <li><i>Visualization & data analysis tools, e.g., VESTA, Origin, VMD, etc. </i></li>
         <li><i>Secure remote access for collaborative projects and simulations</i></li>
-        <li><i>Dedicated faculty mentors are available to guide students across a range of simulation-based research projects</i></li>
+        <li><i>Dedicated faculties and mentors are available to guide students in distinct research projects</i></li>
         </ul>
 
       <h3>Future Vision</h3>
