--- a/publications.html
+++ b/publications.html
@@ -240,6 +240,7 @@
       <h2>Publications</h2>
       <p>Here are some of our most recent publications.</p>
       <ol style="text-align: justify;>
+        <li>M.H. Rocky, F.H. Shihab, D. Roy, A.A. Roman, M.T. Ahmed, "Ab Initio Study of Ge-doped Boron Carbon Nitride Nanosheet for CH2O and CNCl Gas Sensing", Diamond and Related Materials, 2025, 158, 112681. </li>
         <li>M.H. Rocky, F.H. Shihab, D. Roy, A.A. Roman, M.T. Ahmed, "An ab initio study of S-doped penta-graphene for oxygen-based toxic gas sensing application", Materials Chemistry and Physics, 2025, 345, 131277. </li>
         <li>F.H. Shihab, M.F. Mou, D. Roy, A.A. Roman, M.T. Ahmed, "B4C4 nanocluster ring for toxic heavy metal ion adsorption from wastewater: A DFT study", Journal of Physics and Chemistry of Solids, 2025, 207, 112896.</li>
         <li>M.F. Mou, M. Khatun, D. Roy, A.A. Roman, M.T. Ahmed, "Density Functional Theory Calculations of Tetragonal Graphene Nanobowls for Toxic Heavy Metal Ion Removal from Wastewater", ACS Applied Nano Materials, 2025, 8, 3497.</li>
@@ -261,6 +262,7 @@
         <li>P. Dhali, A.A. Oishi, A. Das, M.R. Hossain, F. Ahmed, D. Roy, M.M. Hasan,"A DFT and QTAIM insight into ethylene oxide adsorption on the surfaces of pure and metal-decorated inorganic fullerene-like nanoclusters", Heliyon, 2023, 9, e19407.</li>
         <li>S.A.Bithe, M.M. Hasan, A.A. Oishi, P. Dhali, D. Roy, "To understand the miglitol adsorption behavior on BC3, BN, and GNS nanosheets using DFT and QTAIM analysis for drug delivery applications", Physica Scripta, 2023, 98, 075010.</li>
         <li>S. Yeasmin, M.M. Hasan, A.A. Oishi, S.A.Bithe, D. Roy, A.S. Rad, "A first principles study of adsorption of hydrazine on C20, C40 and C60 fullerene nanoclusters", Molecular Simulation, 2023, 49, 551.</li>
+        
         <!--<li></li>
         -->
       </ol>
