--- a/members.html
+++ b/members.html
@@ -121,11 +121,12 @@
     }
 
     .person-card {
-      text-align: center;
-      background-color: #f8f9fa;
-      border: 1px solid #dee2e6;
-      border-radius: 8px;
-      padding: 20px;
+      .person-card { text-align: center; background-color: #f8f9fa; 
+                    border: 1px solid #dee2e6; border-radius: 8px; 
+                    padding: 15px; /* Slightly reduced padding */ 
+                    width: 22%; /* Adjusted width to try and fit 4 in a row with some spacing */ 
+                    box-sizing: border-box; /* Ensures padding and border are included in the width */ 
+                    margin-bottom: 15px; /* Maintain some vertical spacing */ }
     }
 
     .person-card img {
