--- a/members.html
+++ b/members.html
@@ -121,7 +121,7 @@
     }
 
     .person-card {
-      .person-card { text-align: center; background-color: #f8f9fa; 
+      { text-align: center; background-color: #f8f9fa; 
                     border: 1px solid #dee2e6; border-radius: 8px; 
                     padding: 15px; /* Slightly reduced padding */ 
                     width: 22%; /* Adjusted width to try and fit 4 in a row with some spacing */ 
