--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       <p style="text-align: justify;">The <strong>Condensed Matter Physics (CMP) Lab</strong> at the Department of Physics, 
         Jashore University of Science and Technology, is focused on computational research aimed at understanding the fundamental 
         properties of materials at the atomic scale. Our work is rooted in the theoretical frameworks of condensed matter physics, 
-        employing <strong>Density Functional Theory (DFT)</strong> and <strong>Molecular Dynamics (MD)</strong>strong> simulations 
+        employing <strong>Density Functional Theory (DFT)</strong> and <strong>Molecular Dynamics (MD)</strong> simulations 
         to investigate the structural, electronic, magnetic, and thermal behaviors of a wide range of materials.</p>
 
         <p style="text-align: justify;">The lab is currently equipped for high-level computational modeling, using state-of-the-art simulation techniques to 
