--- a/publications.html
+++ b/publications.html
@@ -239,8 +239,9 @@
     <section id="publications" class="content-section">
       <h2>Publications</h2>
       <p>Here are some of our most recent publications.</p>
-      <ol style="text-align: justify;>
-        <li>M.H. Rocky, F.H. Shihab, D. Roy, A.A. Roman, M.T. Ahmed, "Ab Initio Study of Ge-doped Boron Carbon Nitride Nanosheet for CH2O and CNCl Gas Sensing", Diamond and Related Materials, 2025, 158, 112681. </li>
+      <ul style="text-align: justify;>
+        <!--<li></li>-->
+        <li>M.H. Rocky, F.H. Shihab, D. Roy, A.A. Roman, M.T. Ahmed, "Ab Initio Study of Ge-doped Boron Carbon Nitride Nanosheet for CH2O and CNCl Gas Sensing", Diamond and Related Materials, 2025, 158, 112681.</li>
         <li>M.H. Rocky, F.H. Shihab, D. Roy, A.A. Roman, M.T. Ahmed, "An ab initio study of S-doped penta-graphene for oxygen-based toxic gas sensing application", Materials Chemistry and Physics, 2025, 345, 131277. </li>
         <li>F.H. Shihab, M.F. Mou, D. Roy, A.A. Roman, M.T. Ahmed, "B4C4 nanocluster ring for toxic heavy metal ion adsorption from wastewater: A DFT study", Journal of Physics and Chemistry of Solids, 2025, 207, 112896.</li>
         <li>M.F. Mou, M. Khatun, D. Roy, A.A. Roman, M.T. Ahmed, "Density Functional Theory Calculations of Tetragonal Graphene Nanobowls for Toxic Heavy Metal Ion Removal from Wastewater", ACS Applied Nano Materials, 2025, 8, 3497.</li>
@@ -265,7 +266,7 @@
         
         <!--<li></li>
         -->
-      </ol>
+      </ul>
     </section>
 
     
