--- a/publications.html
+++ b/publications.html
@@ -236,10 +236,10 @@
 
 
 
-    <section id="publications" class="content-section">
+    <section id="publications" class="content-section" style="text-align: justify;>
       <h2>Publications</h2>
       <p>Here are some of our most recent publications.</p>
-      <ul style="text-align: justify;>
+      <ol>
         <!--<li></li>-->
         <li>M.H. Rocky, F.H. Shihab, D. Roy, A.A. Roman, M.T. Ahmed, "Ab Initio Study of Ge-doped Boron Carbon Nitride Nanosheet for CH2O and CNCl Gas Sensing", Diamond and Related Materials, 2025, 158, 112681.</li>
         <li>M.H. Rocky, F.H. Shihab, D. Roy, A.A. Roman, M.T. Ahmed, "An ab initio study of S-doped penta-graphene for oxygen-based toxic gas sensing application", Materials Chemistry and Physics, 2025, 345, 131277. </li>
@@ -266,7 +266,7 @@
         
         <!--<li></li>
         -->
-      </ul>
+      </ol>
     </section>
 
     
