--- a/publications.html
+++ b/publications.html
@@ -171,6 +171,7 @@
       margin-bottom: 20px;
       padding-bottom: 20px;
       border-bottom: 1px solid #e9ecef;
+      text-align: justify;
     }
 
     .publication-list h4 {
@@ -236,7 +237,7 @@
 
 
 
-    <section id="publications" class="content-section" style="text-align: justify;>
+    <section id="publications" class="content-section">
       <h2>Publications</h2>
       <p>Here are some of our most recent publications.</p>
       <ol>
