--- a/publications.html
+++ b/publications.html
@@ -242,28 +242,29 @@
       <p>Here are some of our most recent publications.</p>
       <ol>
         <!--<li></li>-->
-        <li>M.H. Rocky, F.H. Shihab, D. Roy, A.A. Roman, M.T. Ahmed, "Ab Initio Study of Ge-doped Boron Carbon Nitride Nanosheet for CH2O and CNCl Gas Sensing", Diamond and Related Materials, 2025, 158, 112681.</li>
-        <li>M.H. Rocky, F.H. Shihab, D. Roy, A.A. Roman, M.T. Ahmed, "An ab initio study of S-doped penta-graphene for oxygen-based toxic gas sensing application", Materials Chemistry and Physics, 2025, 345, 131277. </li>
-        <li>F.H. Shihab, M.F. Mou, D. Roy, A.A. Roman, M.T. Ahmed, "B4C4 nanocluster ring for toxic heavy metal ion adsorption from wastewater: A DFT study", Journal of Physics and Chemistry of Solids, 2025, 207, 112896.</li>
-        <li>M.F. Mou, M. Khatun, D. Roy, A.A. Roman, M.T. Ahmed, "Density Functional Theory Calculations of Tetragonal Graphene Nanobowls for Toxic Heavy Metal Ion Removal from Wastewater", ACS Applied Nano Materials, 2025, 8, 3497.</li>
-        <li>M.T. Ahmed, D. Roy, A.A. Roman, S. Islam, F. Ahmed, "C3B2 Quantum Dot: A Potential Candidate for Heavy Metal Ion Detection and Removal in Wastewater Treatment", LANGMUIR, 2025, 41, 9456.</li>
-        <li>K. Hossain, M.T. Ahmed et al., "First-principles investigations of As-doped tetragonal boron nitride nanosheet for toxic gas sensing application", Nanoscale Advances, 2024, 7, 354.</li>
-        <li>M. Khatun, S. Hasan, D. Roy, A.A. Roman, M.T. Ahmed, "Ab initio study of hydrostatic pressure effect on structural, electronic, and optical properties of K₂MCdI₆ (M = Ca, Sr) perovskites", Optical and Quantum Electronics, 2024, 57, 39.</li>
-        <li>F.H. Shihab, A. Talha, M.T. Ahmed, A.A. Roman, D. Roy, "The effect of double-doped (B, N) on graphene’s N2O4 gas adsorption performance: an ab initio study", Adsorption, 2024, 31, 23.</li>
-        <li>M. Khatun, M.H. Rocky, A.A. Roman, D. Roy, M.A. Badsha, M.T. Ahmed, "Impact of N‐Doping on MoSe2 Monolayer for PH3, C2N2, and HN3 Gas Sensing: A DFT Study", ChemistryOpen, 2024, e202400210.</li>
-        <li>A.Talha, P. Rahman, A. Tasnim, M.T. Ahmed, A.A. Roman, D. Roy, "To Examine the Adsorption Behavior and Dissociation of Hydrogen Selenide (H2Se) Gas on Pristine and Transition‐Metal (Fe, Mn)‐Doped Boron Nitride Nanosheets: A DFT Study", ChemistrySelect, 2024, 9, e202401651.</li>
-        <li>M.T. Ahmed, D. Roy, A.A. Roman, S. Islam, F. Ahmed, "Ab Initio Study of the Graphyne-like γ-SiC Nanoflake for Toxic Gas-Sensing Applications", LANGMUIR, 2024, 40, 15332.</li>
-        <li>R. Khatun, M.H. Rocky, D. Roy, A.A. Roman, M.T. Ahmed, "Ab initio study of Ti-doped C3N nanosheet as COCl2, O3, and HCN gas sensor", Computational and Theoretical Chemistry, 2024, 1239, 114769.</li>
-        <li>A. Talha, F.H. Shihab, M.T. Ahmed et al. "Density functional theory study of the adsorption and dissociation of OF2 and O3 gases on the surface of pristine and Al, Ti and Cr doped graphene", AIP Advances, 2024, 14, 075008.</li>
-        <li>M.T. Ahmed, D. Roy, A.A. Roman, Z. Kowser, S. Islam, F. Ahmed, "The adsorption of CO gas on the surface of boron nitride incorporating 2D carbon allotropes: a DFT analysis", Physica Scripta, 2024, 99, 0659c7.</li>
-        <li>M.H. Rocky, M. Khatun, A.A. Roman, D. Roy, M.T. Ahmed, "A DFT study on boron carbon nitride and in-plane graphene-boron nitride nanosheets for O3 and F2 gas sensing", Computational and Theoretical Chemistry, 2024, 1237, 114639.</li>
-        <li>I.J. Tonny, M. Khatun, D. Roy, A.A. Roman, M.T. Ahmed, "A first-principles investigation of BF3 and ClF3 gas sensing on N-defected AlN nanosheets", AIP Advances, 2024, 14, 045136.</li>
-        <li>M.T. Ahmed, A.A. Roman, D. Roy, Islam, F. Ahmed, "Phosphorus-doped T-graphene nanocapsule toward O3 and SO2 gas sensing: a DFT and QTAIM analysis", Scientific Reports, 2024, 14, 3467.</li>
-        <li>M.T. Ahmed, D. Roy, A.A. Roman, S. Islam, F. Ahmed, "A first principles study of RbSnCl3 perovskite toward NH3, SO2, and NO gas sensing", Nanoscale Advances, 2024, 6, 1218.</li>
-        <li>M.T. Ahmed, D. Roy, A.A. Roman et al.,"A First-Principles Investigation of Cr Adsorption on C8 and B4N4 Nanocage in Aqueous Medium", Physical Chemistry Chemical Physics, 2023, 25, 32261.</li>
-        <li>P. Dhali, A.A. Oishi, A. Das, M.R. Hossain, F. Ahmed, D. Roy, M.M. Hasan,"A DFT and QTAIM insight into ethylene oxide adsorption on the surfaces of pure and metal-decorated inorganic fullerene-like nanoclusters", Heliyon, 2023, 9, e19407.</li>
-        <li>S.A.Bithe, M.M. Hasan, A.A. Oishi, P. Dhali, D. Roy, "To understand the miglitol adsorption behavior on BC3, BN, and GNS nanosheets using DFT and QTAIM analysis for drug delivery applications", Physica Scripta, 2023, 98, 075010.</li>
-        <li>S. Yeasmin, M.M. Hasan, A.A. Oishi, S.A.Bithe, D. Roy, A.S. Rad, "A first principles study of adsorption of hydrazine on C20, C40 and C60 fullerene nanoclusters", Molecular Simulation, 2023, 49, 551.</li>
+        <li>M.H.S. Fahim, A. Talha, S.R. Biswas, M.T. Ahmed, A.A. Roman, D. Roy, "Adsorption behavior of the blue phosphorene monolayer, doped with Ti and Cr, for CO2 and SO3 gases: A first-principles analysis", <i>Surfaces and Interfaces</i>, 2025, 72, 107318.</li>
+        <li>M.H. Rocky, F.H. Shihab, D. Roy, A.A. Roman, M.T. Ahmed, "Ab Initio Study of Ge-doped Boron Carbon Nitride Nanosheet for CH2O and CNCl Gas Sensing", <i>Diamond and Related Materials</i>, 2025, 158, 112681.</li>
+        <li>M.H. Rocky, F.H. Shihab, D. Roy, A.A. Roman, M.T. Ahmed, "An ab initio study of S-doped penta-graphene for oxygen-based toxic gas sensing application", <i>Materials Chemistry and Physics</i>, 2025, 345, 131277. </li>
+        <li>F.H. Shihab, M.F. Mou, D. Roy, A.A. Roman, M.T. Ahmed, "B4C4 nanocluster ring for toxic heavy metal ion adsorption from wastewater: A DFT study", <i>Journal of Physics and Chemistry of Solids</i>, 2025, 207, 112896.</li>
+        <li>M.F. Mou, M. Khatun, D. Roy, A.A. Roman, M.T. Ahmed, "Density Functional Theory Calculations of Tetragonal Graphene Nanobowls for Toxic Heavy Metal Ion Removal from Wastewater", <i>ACS Applied Nano Materials</i>, 2025, 8, 3497.</li>
+        <li>M.T. Ahmed, D. Roy, A.A. Roman, S. Islam, F. Ahmed, "C3B2 Quantum Dot: A Potential Candidate for Heavy Metal Ion Detection and Removal in Wastewater Treatment", <i>Langmuir</i>, 2025, 41, 9456.</li>
+        <li>K. Hossain, M.T. Ahmed et al., "First-principles investigations of As-doped tetragonal boron nitride nanosheet for toxic gas sensing application", <i>Nanoscale Advances</i>, 2024, 7, 354.</li>
+        <li>M. Khatun, S. Hasan, D. Roy, A.A. Roman, M.T. Ahmed, "Ab initio study of hydrostatic pressure effect on structural, electronic, and optical properties of K₂MCdI₆ (M = Ca, Sr) perovskites", <i>Optical and Quantum Electronics</i>, 2024, 57, 39.</li>
+        <li>F.H. Shihab, A. Talha, M.T. Ahmed, A.A. Roman, D. Roy, "The effect of double-doped (B, N) on graphene’s N2O4 gas adsorption performance: an ab initio study", <i>Adsorption</i>, 2024, 31, 23.</li>
+        <li>M. Khatun, M.H. Rocky, A.A. Roman, D. Roy, M.A. Badsha, M.T. Ahmed, "Impact of N‐Doping on MoSe2 Monolayer for PH3, C2N2, and HN3 Gas Sensing: A DFT Study", <i>ChemistryOpen</i>, 2024, e202400210.</li>
+        <li>A.Talha, P. Rahman, A. Tasnim, M.T. Ahmed, A.A. Roman, D. Roy, "To Examine the Adsorption Behavior and Dissociation of Hydrogen Selenide (H2Se) Gas on Pristine and Transition‐Metal (Fe, Mn)‐Doped Boron Nitride Nanosheets: A DFT Study", <i>ChemistrySelect</i>, 2024, 9, e202401651.</li>
+        <li>M.T. Ahmed, D. Roy, A.A. Roman, S. Islam, F. Ahmed, "Ab Initio Study of the Graphyne-like γ-SiC Nanoflake for Toxic Gas-Sensing Applications", <i>Langmuir</i>, 2024, 40, 15332.</li>
+        <li>R. Khatun, M.H. Rocky, D. Roy, A.A. Roman, M.T. Ahmed, "Ab initio study of Ti-doped C3N nanosheet as COCl2, O3, and HCN gas sensor", <i>Computational and Theoretical Chemistry</i>, 2024, 1239, 114769.</li>
+        <li>A. Talha, F.H. Shihab, M.T. Ahmed et al. "Density functional theory study of the adsorption and dissociation of OF2 and O3 gases on the surface of pristine and Al, Ti and Cr doped graphene", <i>AIP Advances</i>, 2024, 14, 075008.</li>
+        <li>M.T. Ahmed, D. Roy, A.A. Roman, Z. Kowser, S. Islam, F. Ahmed, "The adsorption of CO gas on the surface of boron nitride incorporating 2D carbon allotropes: a DFT analysis", <i>Physica Scripta</i>, 2024, 99, 0659c7.</li>
+        <li>M.H. Rocky, M. Khatun, A.A. Roman, D. Roy, M.T. Ahmed, "A DFT study on boron carbon nitride and in-plane graphene-boron nitride nanosheets for O3 and F2 gas sensing", <i>Computational and Theoretical Chemistry</i>, 2024, 1237, 114639.</li>
+        <li>I.J. Tonny, M. Khatun, D. Roy, A.A. Roman, M.T. Ahmed, "A first-principles investigation of BF3 and ClF3 gas sensing on N-defected AlN nanosheets", <i>AIP Advances</i>, 2024, 14, 045136.</li>
+        <li>M.T. Ahmed, A.A. Roman, D. Roy, Islam, F. Ahmed, "Phosphorus-doped T-graphene nanocapsule toward O3 and SO2 gas sensing: a DFT and QTAIM analysis", <i>Scientific Reports</i>, 2024, 14, 3467.</li>
+        <li>M.T. Ahmed, D. Roy, A.A. Roman, S. Islam, F. Ahmed, "A first principles study of RbSnCl3 perovskite toward NH3, SO2, and NO gas sensing", <i>Nanoscale Advances</i>, 2024, 6, 1218.</li>
+        <li>M.T. Ahmed, D. Roy, A.A. Roman et al.,"A First-Principles Investigation of Cr Adsorption on C8 and B4N4 Nanocage in Aqueous Medium", <i>Physical Chemistry Chemical Physics</i>, 2023, 25, 32261.</li>
+        <li>P. Dhali, A.A. Oishi, A. Das, M.R. Hossain, F. Ahmed, D. Roy, M.M. Hasan,"A DFT and QTAIM insight into ethylene oxide adsorption on the surfaces of pure and metal-decorated inorganic fullerene-like nanoclusters", <i>Heliyon</i>, 2023, 9, e19407.</li>
+        <li>S.A.Bithe, M.M. Hasan, A.A. Oishi, P. Dhali, D. Roy, "To understand the miglitol adsorption behavior on BC3, BN, and GNS nanosheets using DFT and QTAIM analysis for drug delivery applications", <i>Physica Scripta</i>, 2023, 98, 075010.</li>
+        <li>S. Yeasmin, M.M. Hasan, A.A. Oishi, S.A.Bithe, D. Roy, A.S. Rad, "A first principles study of adsorption of hydrazine on C20, C40 and C60 fullerene nanoclusters", <i>Molecular Simulation</i>, 2023, 49, 551.</li>
         
         <!--<li></li>
         -->
