--- a/publications.html
+++ b/publications.html
@@ -242,6 +242,7 @@
       <p>Here are some of our most recent publications.</p>
       <ol>
         <!--<li></li>-->
+        <li>R.D. Daymond, F.H. Shihab, N. Siddique, M.T. Ahmed, A.A. Roman, D. Roy, "Al and Ti-doped black phosphorus as sensitive materials for adsorption of HF and H2S toxic gases: an ab initio study", <strong>RSC Advances</strong>, 2025, 15, 28703.</li>
         <li>M.H.S. Fahim, A. Talha, S.R. Biswas, M.T. Ahmed, A.A. Roman, D. Roy, "Adsorption behavior of the blue phosphorene monolayer, doped with Ti and Cr, for CO2 and SO3 gases: A first-principles analysis", <i>Surfaces and Interfaces</i>, 2025, 72, 107318.</li>
         <li>M.H. Rocky, F.H. Shihab, D. Roy, A.A. Roman, M.T. Ahmed, "Ab Initio Study of Ge-doped Boron Carbon Nitride Nanosheet for CH2O and CNCl Gas Sensing", <i>Diamond and Related Materials</i>, 2025, 158, 112681.</li>
         <li>M.H. Rocky, F.H. Shihab, D. Roy, A.A. Roman, M.T. Ahmed, "An ab initio study of S-doped penta-graphene for oxygen-based toxic gas sensing application", <i>Materials Chemistry and Physics</i>, 2025, 345, 131277. </li>
