Add publication entry for S.R. Biswas et al.

--- a/publications.html
+++ b/publications.html
@@ -242,6 +242,7 @@
       <p>Here are some of our most recent publications.</p>
       <ol>
         <!--<li></li>-->
+        <li>S.R. Biswas, M.H.S. Fahim, M.T. Ahmed, A. Al Roman, D. Roy, "A first principles study of the adsorption behavior of H2S and SO2 gases on AlN nanosheets with fluorine defects", <strong>Chemical Physics Letters</strong>, 2025, 142497.</li>
         <li>R.D. Daymond, F.H. Shihab, N. Siddique, M.T. Ahmed, A.A. Roman, D. Roy, "Al and Ti-doped black phosphorus as sensitive materials for adsorption of HF and H2S toxic gases: an ab initio study", <strong>RSC Advances</strong>, 2025, 15, 28703.</li>
         <li>M.H.S. Fahim, A. Talha, S.R. Biswas, M.T. Ahmed, A.A. Roman, D. Roy, "Adsorption behavior of the blue phosphorene monolayer, doped with Ti and Cr, for CO2 and SO3 gases: A first-principles analysis", <strong>Surfaces and Interfaces</strong>, 2025, 72, 107318.</li>
         <li>M.H. Rocky, F.H. Shihab, D. Roy, A.A. Roman, M.T. Ahmed, "Ab Initio Study of Ge-doped Boron Carbon Nitride Nanosheet for CH2O and CNCl Gas Sensing", <strong>Diamond and Related Materials</strong>, 2025, 158, 112681.</li>
