Add publication on DFT investigation of boron nitride

--- a/publications.html
+++ b/publications.html
@@ -242,6 +242,7 @@
       <p>Here are some of our most recent publications.</p>
       <ol>
         <!--<li></li>-->
+        <li>D. Roy, M. Ghosal, F.H. Shihab, M.T. Ahmed, M.K. Hossain, and F. Ahmed, "DFT Investigation of Tetragonal Boron Nitride Nanoflakes for CO, NO, HCN, BrCl, F2, Br2, and Cl2 Hazardous Gas Sensing", <strong>ACS Applied Nano Materials</strong>, 2025.</li>
         <li>M.H.S. Fahim, S.R. Biswas, R.D. Daymond, A.A. Mehnaz, S.A. Shetu, N. Siddique, M.T. Ahmed, A. Al Roman, D. Roy, "T-boron-nitride and black phosphorus nanoflakes for anticancer drug delivery application: A computational insight", <strong>Journal of Molecular Liquids</strong>, 2025, 438(B) 128799.</li>
         <li>S.R. Biswas, M.H.S. Fahim, M.T. Ahmed, A. Al Roman, D. Roy, "A first principles study of the adsorption behavior of H2S and SO2 gases on AlN nanosheets with fluorine defects", <strong>Chemical Physics Letters</strong>, 2025, 142497.</li>
         <li>R.D. Daymond, F.H. Shihab, N. Siddique, M.T. Ahmed, A.A. Roman, D. Roy, "Al and Ti-doped black phosphorus as sensitive materials for adsorption of HF and H2S toxic gases: an ab initio study", <strong>RSC Advances</strong>, 2025, 15, 28703.</li>
