--- a/publications.html
+++ b/publications.html
@@ -242,6 +242,7 @@
       <p>Here are some of our most recent publications.</p>
       <ol>
         <!--<li></li>-->
+        <li>U.J. Golder, M.H. Rocky, A.I. Akunjee, F.H. Shihab, D. Roy, A.Al Roman and M.T. Ahmed, "First-principles study of CO, NO, and SO2 adsorption mechanisms on phosphorus-doped tetragonal boron nitride nanosheets for gas sensing applications", <strong>Physica Scripta</strong>, 2025, 100, 115942.</li>
         <li>D. Roy, M. Ghosal, F.H. Shihab, M.T. Ahmed, M.K. Hossain, and F. Ahmed, "DFT Investigation of Tetragonal Boron Nitride Nanoflakes for CO, NO, HCN, BrCl, F2, Br2, and Cl2 Hazardous Gas Sensing", <strong>ACS Applied Nano Materials</strong>, 2025.</li>
         <li>A.A. Mehnaz, M.H.S. Fahim, D. Roy, A.A. Roman, M.T. Ahmed, "Purification of Ni2+ heavy metal ions from wastewater using γ-graphyne: Insights from DFT and QTAIM analysis", <strong>Solid State Communications</strong>, 2025, 407, 116238.</li>
         <li>M.H.S. Fahim, S.R. Biswas, R.D. Daymond, A.A. Mehnaz, S.A. Shetu, N. Siddique, M.T. Ahmed, A.A. Roman, D. Roy, "T-boron-nitride and black phosphorus nanoflakes for anticancer drug delivery application: A computational insight", <strong>Journal of Molecular Liquids</strong>, 2025, 438(B) 128799.</li>
