Add new publication to the list

--- a/publications.html
+++ b/publications.html
@@ -242,6 +242,7 @@
       <p>Here are some of our most recent publications.</p>
       <ol>
         <!--<li></li>-->
+        <li>M.T. Ahmed, D. Roy, A.Al Roman, F. Ahmed, "T-graphene nanotube: A promising candidate for H2 storage application", <strong>International Journal of Hydrogen Energy</strong>, 2025, 200, 152932.</li>
         <li>U.J. Golder, M.H. Rocky, A.I. Akunjee, F.H. Shihab, D. Roy, A.Al Roman and M.T. Ahmed, "First-principles study of CO, NO, and SO2 adsorption mechanisms on phosphorus-doped tetragonal boron nitride nanosheets for gas sensing applications", <strong>Physica Scripta</strong>, 2025, 100, 115942.</li>
         <li>D. Roy, M. Ghosal, F.H. Shihab, M.T. Ahmed, M.K. Hossain, and F. Ahmed, "DFT Investigation of Tetragonal Boron Nitride Nanoflakes for CO, NO, HCN, BrCl, F2, Br2, and Cl2 Hazardous Gas Sensing", <strong>ACS Applied Nano Materials</strong>, 2025, 8(46), 22166.</li>
         <li>A.A. Mehnaz, M.H.S. Fahim, D. Roy, A.A. Roman, M.T. Ahmed, "Purification of Ni2+ heavy metal ions from wastewater using γ-graphyne: Insights from DFT and QTAIM analysis", <strong>Solid State Communications</strong>, 2025, 407, 116238.</li>
